Second try at fixing counts of applications to process.
When Outreachy organizers are processing initial applications, they only
want to see the applications that are not assigned to a reviewer.
Assigning it to a reviewer typically means they need a second review.

Clarify the dashboard heading that initial applications to process does
not include applications assigned to a reviewer.

Change the query for counting strong, good, maybe, and unclear initial
applications to filter for applications that are not assigned to a
reviewer.

--- a/home/templates/home/dashboard/application_summary.html
+++ b/home/templates/home/dashboard/application_summary.html
@@ -20,7 +20,7 @@
 	{% endif %}
 </ul>
 
-<p>Reviewed:</p>
+<p>Reviewed (and not assigned to a reviewer):</p>
 <ul>
 	{% if section.reviewed_strong_count %}
 		<li>{{ section.reviewed_strong_count }} - <a href="{% url 'process-strong-applications' %}">+3 rated applications</a></li>
