Update hiring blog post
Fix typos. Emphasize that the optional qualities are really really
optional and people should apply anyway.

--- a/home/templates/home/blog/2021-10-12-outreachy-is-hiring.html
+++ b/home/templates/home/blog/2021-10-12-outreachy-is-hiring.html
@@ -97,20 +97,20 @@ Outreachy needs you to:
 
 	<li>Be available to team members for at least 3 hours from 10am Eastern U.S. time to 5pm Eastern U.S. time</li>
 
-	<li>Be eligible to work in the country living in</li>
+	<li>Be eligible to work in the country you are living in</li>
 </ul>
 
 
 <p>
-Outreachy would love it if you had the following qualities, but they're completely optional:
+Outreachy would love it if you had the following qualities, but they're <b>completely optional</b>. Even if you don't have these qualities, please apply!
 </p>
 
 <ul>
-	<li>Familiarity with the Outreachy program (either as an Outreachy applicant, former intern, mentor, or coordinator)</li>
-
 	<li>Fluency in a language other than English</li>
 
 	<li>Experience living in a country that has a high number of Outreachy applicants, such as Argentina, Brazil, Cameroon, Canada, India, Kenya, Nigeria, Pakistan, Uganda, Uruguay, and the United States of America.</li>
+
+	<li>Familiarity with the Outreachy program (either as an Outreachy applicant, past intern, mentor, or coordinator)</li>
 </ul>
 
 <h3>Compensation</h3>
@@ -230,7 +230,7 @@ These dates may change, depending on the number of applications we receive.
 </p>
 
 <p>
-All candidates will be notified of our decision by February 1, 2021.
+All candidates will be notified of our decision by February 1, 2022.
 </p>
 
 {% endblock %}
