Update donation instructions to use new Conservancy accounting contact policies

--- a/home/templates/home/donate.html
+++ b/home/templates/home/donate.html
@@ -17,7 +17,7 @@ Individual Donations
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
     <div class="rich-text"><p><strong>Check</strong> We can accept check donations drawn in USD from banks in the USA. Please make the check payable to "Software Freedom Conservancy, Inc." and put "Directed donation: Outreachy" in the memo field. Please mail the check to: <br/>Software Freedom Conservancy, Inc.<br/>137 Montague ST Ste 380<br/>Brooklyn, NY 11201<br/>USA</p></div>
-    <div class="rich-text"><p><strong>Wire</strong> Please write to <a href="mailto:accounting@sfconservancy.org">accounting@sfconservancy.org</a> and include the country of origin of your wire transfer and the native currency of your donation to receive instructions for a donation via wire.</p></div>
+    <div class="rich-text"><p><strong>Wire</strong> Please email <a href="mailto:accounts-receivable@tix.sfconservancy.org">accounts-receivable@tix.sfconservancy.org</a>. Use the email subject "Outreachy donation from NAME". Include the country of origin of your wire transfer and the native currency of your donation. You will receive an automated reply that includes an RT ticket number in the subject line. Please keep that ticket number intact on all emails about your donation. Conservancy accounting will reply with instructions for a donation via wire.</p></div>
     <div class="rich-text"><p>If you are a corporation seeking to sponsor Outreachy, please see <a href="https://www.outreachy.org/sponsor/">our sponsor page.</a></p></div>
 
     </div>
