Add Information about how Outreachy is different from other internship programs

--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -151,7 +151,18 @@ Community Guide | Outreachy Documentation
 <hr>
 
 <h3 id='program-differences'><a href='#program-differences'>1.6. How is Outreachy different from other internship programs?</a></h3>
-
+<p>Below are few points that makes Outreachy different from other paid and remote open source internships:</p>
+<ul>
+	<li>It is conducted twice a year that is from May to August and December to March.</li>
+	<li>Outreachy expressly invites applicants who are women (both cis and trans), trans men, non-binary people, and genderqueer people to apply.</li>
+	<li>Outreachy is organized by the Software Freedom Conservancy for the people who are underrepresented in this specific field.</li>
+	<li>Outreachy interns are paid $5,500 USD total for three months of work. The stipend is paid in three parts: $2,000 initial stipend. $2,000 mid-point stipend.</li>
+	<li>The Outreachy Internship program is not only for programmers or developers, there are lots of opportunities in the Outreachy program for non-technical people too.</li>
+	<li>Candidates who were GSoC interns earlier are not eligible for Outreachy even if they have not completed their GSoC program successfully.</li>
+	<li>Candidates who have part-time jobs or contract-based jobs are eligible for the program but candidates having full-time jobs are not eligible.</li>
+	<li>Co-mentoring is encouraged. Co-mentors can help review intern contributions and answer questions.</li>
+	<li>Our documentation, which can be found <a href='https://www.outreachy.org/docs/'>here</a></li>
+</ul>
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
