Fix payment and feedback schedule in internship guide
Outreachy will now collect feedback from mentors and interns 4 times
during the internship.

The initial stipend ($3,000) will be sent after feedback #1 is
successful.

Feedback #2 is a check point to ensure the internship is running
smoothly, but is not associated with a stipend payment.

The final stipend ($4,000) will be sent after feedback #3 is
successful.

Feedback #4 is a check point to ensure the internship is running
smoothly, but is not associated with a stipend payment.

Internships can be extended at any of the four feedback points.

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -76,20 +76,17 @@ Internship Guide | Outreachy Documentation
 <hr>
 <h2 id='payments'><a href='#payments'>Payments</a></h2>
 
-<p>Outreachy interns are paid $5,500 USD total for three months of work. The stipend is paid in three parts:</p>
+<p>Outreachy interns are paid $7,000 USD total for three months of work. The stipend is paid in two payments:</p>
 <ul>
 	{% if applicant_round %}
 		<li>${{ applicant_round.initialpayment|intcomma }} initial stipend</li>
-		<li>${{ applicant_round.midpayment|intcomma }} mid-point stipend</li>
 		<li>${{ applicant_round.finalpayment|intcomma }} final stipend</li>
 	{% elif intern_round %}
 		<li>${{ intern_round.initialpayment|intcomma }} initial stipend</li>
-		<li>${{ intern_round.midpayment|intcomma }} mid-point stipend</li>
 		<li>${{ intern_round.finalpayment|intcomma }} final stipend</li>
 	{% else %}
-		<li>$1,000 initial stipend</li>
-		<li>$2,000 mid-point stipend</li>
-		<li>$2,500 final stipend</li>
+		<li>$3,000 initial stipend</li>
+		<li>$4,000 final stipend</li>
 	{% endif %}
 </ul>
 
