Week 1 chat: change topic to remote work tips
Most Outreachy interns introduce themselves as soon as they sign into
the Zulip chat. They also tend to ask questions in the #help channel
right away. We've found that the intro Q&A chat tends to be a little
light on topics.

At the same time, we have also found that most interns and some mentors
are new to remote internships. So this cohort we want our first chat to
talk about how to effectively work remotely.

Remove mention of the chat topic from the first day email, so that if we
change the topic later, it's easier to edit it in one place.

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -24,6 +24,10 @@ Internship Guide | Outreachy Documentation
 	</li>
 	<li><a href='#blogging-faq'>Blogging FAQ</a></li>
 	<li><a href='#chats'>Chats with interns, mentors, and alums</a>
+		<ul>
+			<li><a href='#week-1-chat'>Week 1 chat: Tips for remote work</a>
+		</ul>
+	</li>
 </ol>
 
 <hr>
@@ -252,7 +256,7 @@ Internship Guide | Outreachy Documentation
 {% if applicant_round %}
 	{% with current_round=applicant_round %}
 		<table class="table">
-			<tr><th width="250">{{ current_round.week_two_chat_text_date }} UTC</th><td>Introduction chat - come get your questions answered!</td></tr>
+			<tr><th width="250">{{ current_round.week_two_chat_text_date }} UTC</th><td>Tips for remote work</td></tr>
 			<tr><th>{{ current_round.week_four_chat_text_date }} UTC</th><td>Share something you're stuck on</td></tr>
 			<tr><th>{{ current_round.week_six_chat_text_date }} UTC</th><td>Share why you're passionate about your project or community</td></tr>
 			<tr><th>{{ current_round.week_eight_chat_text_date }} UTC</th><td>Share one "easy" project goal that took longer than expected</td></tr>
@@ -277,6 +281,25 @@ Internship Guide | Outreachy Documentation
 	{% endwith %}
 {% endif %}
 
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<a href="#week-1-chat"><h3 id="week-1-chat">Week 1 chat: Tips for remote work</h3></a>
+
+<p>We will be talking about how to effectively work remotely! We understand many interns (and some mentors) will be new to working remotely. This is your chance to learn more.</p>
+
+<p>We invite people who are new to collaborating remotely to bring your concerns and questions. We invite people who are experienced in collaborating remotely to answer questions and give tips.</p>
+
+<p>Topics for this conversation may include:</p>
+<ul>
+	<li>effective remote communication</li>
+	<li>how to deal with timezone differences</li>
+	<li>how a daily stand up works</li>
+	<li>what to expect from a weekly video or phone chat between interns and mentors</li>
+	<li>tools for collaborating effectively</li>
+	<li>setting up your work space and work schedule</li>
+	<li>work-life balance</li>
+</ul>
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 {% endblock %}
